Fixed url schemes

--- a/Shortener/templates/index.html
+++ b/Shortener/templates/index.html
@@ -21,7 +21,7 @@
             {% csrf_token %}
             <div class="container-fluid">
                 <input id="url" class="form-control form-control-lg pl-5" style="padding-top: 1.5em; padding-bottom: 1.5em; box-shadow: 0px 0px 10px 0 #000; border-radius: 5em;"
-                    name="url" type="text" placeholder="Enter a valid URL">
+                    name="url" type="text" placeholder="Enter a valid URL" required>
                 <br>
                 <br>
                 <input type="submit" class="btn btn-dark btn-lg" value="Shorten">
@@ -41,7 +41,7 @@
         $(document).on('submit', '#form', function (event) {
             event.preventDefault();
 
-            $.ajax({
+         $.ajax({
                 type: 'POST',
                 data: {
                     url: $('#url').val(),
@@ -63,6 +63,9 @@
         })
 
 
+        // ************** Copy Link Feature ************
+
+        
         function copylink() {
             var field = document.getElementById('get-link')
             
